src/assets/styles/main.css
/*Significant Programme code requirements*/
#app {
  font-family: lato, sans-serif;
  font-weight: 400;
  font-style: normal;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  color: var(--grey);
}

:root {
  --green: #08bdb6;
  --blue: #48b1bf;
  --white: #ffffff;
  --grey: #303030;
}

.button--primary {
  background-color: var(--green);
  border: none;
  padding: 10px;
}

.button--primary:hover {
  background-color: var(--blue);
  border: none;
  padding: 10px;
}

.button--secondary {
  border: solid 1px var(--green);
  background-color: transparent;
  padding: 10px;
}

.button--secondary:hover {
  border: solid 1px var(--blue);
  background-color: transparent;
  padding: 10px;
}

.crudIcon {
  width: 20px;
  background-color: var(--white);
  border: none;
}

.title {
  font-family: poppins, sans-serif;
  font-weight: 400;
  font-style: normal;
  color: var(--grey);
  border-top: 1px solid var(--green);
  padding-top: 20px;
}

.title--secondary {
  font-family: poppins, sans-serif;
  font-weight: 400;
  font-style: normal;
  color: var(--grey);
  margin-top: 50px;
  font-size: 28px;
}

.title--login {
  font-family: poppins, sans-serif;
  font-weight: 400;
  font-style: normal;
  color: var(--white);
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
}

.icon-nav {
  display: flex;
  width: 100vw;
  background: var(--white);
}

h1 {
  font-size: 40px;
}

#logo {
  height: 100px;
  margin-left: 15px;
  display: flex;
}


.icon-nav li {
  list-style: none;
  margin-top: 30px;
}


.icon-nav li:first-child {
  margin-right: auto;
  margin-top: 0px;
}

.icon-nav li:last-child {
  margin-right: auto;
  margin-right: 60px;
}

/*CSS for the Home Landing Page*/
.container {
  padding-top: -100px;
  position: absolute;
  text-align: center;
  color: white;
}

.centerMessage {
  position: absolute;
  color: var(--white);
  font-size: 48px;
  font-family: poppins, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-weight: bold;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  margin-top: -300px;
}

.createEvent {
  background-color: #08bdb6;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #303030;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 50px;
  padding-right: 50px;
}

.createEvent:hover {
  background-color: #48b1bf;
  transform: scale(1.1);
  border-radius: 26%;
}

.home {
  padding-top: 200px;
}

.landingImg {
  object-fit: cover;
  width: 100%;
  height: 500px;
  opacity: 0.4;
}

.overlayLandingImg {
  width: 100%;
  height: 500px;
  background: black;
  overflow: hidden;
  background: var(--green); 
  background: -webkit-linear-gradient(var(--green), var(--grey)),
    url("../images/LandingPage.jpg");
  background: linear-gradient(var(--green), var(--grey)),
    url("../images/LandingPage.jpg"); /* The least supported option. */
}

/*CSS for the Login Page*/

* {
  margin: 0;
  padding: 0;
}

.login {
  padding-top: 300px;
  text-align: left;
  margin-left: 25%;
  margin-right: 25%;
}

.loginForm__container {
  padding: 16px;
  border: none;
}

.background-image {
  background-size: cover;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.loginForm {
  border: none;
}

.loginFormInput {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  box-sizing: border-box;
}

#submitLogin {
  background-color: #08bdb6;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #303030;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: 100%;
}

#submitLogin:hover {
  background-color: #48b1bf;
}

.SignUpBtn {
  color: #303030;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  text-decoration: underline;
  width: auto;
  padding: 10px 18px;
  background-color: transparent;
}

.SignUpBtn:hover {
  color: #303030;
  width: auto;
  padding: 10px 18px;
  background-color: transparent;
}

span.psw {
  float: right;
  padding-top: 16px;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #303030;
}

span.psw a {
  color: #303030;
}

span.psw a:hover a:visited {
  color: #303030;
}

span.signUp {
  float: left;
  padding-top: 16px;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #303030;
}

span.signUp a {
  color: #303030;
}

span.signUp a:hover a:visited {
  color: #303030;
}

span.learnMore {
  float: right;
  margin-top: -15px;
  padding-top: 0px;
  text-align: center;
  font-size: 14px;
  font-family: lato, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #303030;
}

span.learnMore a {
  color: #303030;
}

span.learnMore a:hover a:visited {
  color: #303030;
}

/*CSS for Create Event Page*/

table {
  padding-top: 10px;
  width: 80%;
  left: 50%;
} 

td {
border: none;
text-align: center;
padding: 8px;
}


 th {
  padding: 5px 10px 5px 10px;
  border: none;
}

.createEventBtn {
  margin-top: 20px;
}

.tableField {
  display: flex;
  margin-bottom: 10px;
}

.tableField label {
  width: 150px;
  justify-items: flex-start;
  display: flex;
}

.tableField input {
  justify-items: flex-end;
  width: 250px;
}

.formBorder {
  border: 2px solid var(--green);
  display: inline-block;
  padding: 20px 300px 20px 300px;
}

#address {
  width: 353px;
}

#category,
#privacy {
  width: 360px;
}

#description {
  border: 2px solid var(--blue);
  display: inline-block;
  padding-left: 14%;
  padding-right: 14.6%;
  padding-top: 1%;
  padding-bottom: 1%;
}

.postit {
  width: 100px;
  height: 30px;
  float: right;
  margin-left: 10px;
}

.postit:hover {
  transform: scale(1.1);
  background-color: #06bdb6;
}
/* ... */

